k8s/homework-3/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: userservice
  name: userservice-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - image: zhukoffg/userserviceapi:1.6
          name: userservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      hostname: userservice
      restartPolicy: Always
