k8s/homework-3/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  type: NodePort
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
