k8s/homework-3/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-svc
  labels:
    run: userservice
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: userservice
