k8s/homework-3/userservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: userservice
            port:
              number: 8080
