k8s/homework-3/userserviceapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: userserviceapi
            port:
              number: 80
